plugins {
	id 'net.fabricmc.fabric-loom' version '1.15.+'
	id 'maven-publish'
	id "com.modrinth.minotaur" version "2.+"
	id 'com.matthewprenger.cursegradle' version '1.4.0'
}

base {
	archivesName = project.archives_base_name
}
version = project.mod_version + "+" + project.minecraft_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more formation about repositories.
	maven { url "https://maven.nucleoid.xyz" }
	maven { url "https://maven.nucleoid.xyz" }
	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
		content {
			includeGroup "maven.modrinth"
		}
	}

	mavenLocal()
}

loom {
	accessWidenerPath = file("src/main/resources/brewery.accesswidener")

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	implementation include('xyz.nucleoid:server-translations-api:3.0.1+26.1')
	implementation 'eu.pb4:polymer-core:0.16.0-pre.2+26.1-rc-2'
	implementation 'eu.pb4:polymer-virtual-entity:0.16.0-pre.2+26.1-rc-2'
	implementation 'eu.pb4:polymer-resource-pack:0.16.0-pre.2+26.1-rc-2'
	localRuntime 'eu.pb4:polymer-autohost:0.16.0-pre.2+26.1-rc-2'
	implementation include("eu.pb4:sgui:2.0.0-beta.2+26.1")
	implementation include("eu.pb4:placeholder-api:3.0.0-beta.2+26.1")

	implementation include("me.lucko:fabric-permissions-api:0.7.0")
	implementation include("net.objecthunter:exp4j:0.4.8")


	compileOnly "eu.pb4:polydex:1.9.2+26.1-rc-3"

	// Uncomment the following line to enable the deprecated Fabric API modules. 
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}"}
	}

	from("src/main/resources/data/brewery/lang") {
		into("assets/brewery/lang")
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

curseforge {
	if (System.getenv("CURSEFORGE")) {
		apiKey = System.getenv("CURSEFORGE")

		project {
			id = "681703"
			releaseType = "release"
			changelog = System.getenv("CHANGELOG")
			changelogType = "markdown"
			addGameVersion((project.minecraft_version.contains("-") ? ((String) project.minecraft_version.split("-")[0] + "-snapshot") : project.minecraft_version))
			addGameVersion "Fabric"
			relations {
				requiredDependency 'polymer'
			}
			mainArtifact(jar.archiveFile)

			afterEvaluate {
				uploadTask.dependsOn("jar")
			}
		}
	}

	options {
		forgeGradleIntegration = false
	}
	jar {
		finalizedBy project.tasks.curseforge
	}
}

if (System.getenv("MODRINTH")) {
	modrinth {
		token = System.getenv("MODRINTH")
		projectId = 'nr7cSJlY'// The ID of your modrinth project, slugs will not work.
		versionNumber = "" + version // The version of the mod to upload.
		versionType = "release"
		uploadFile = jar // This links to a task that builds your mod jar and sets "uploadFile" to the mod jar.
		gameVersions = [((String) project.minecraft_version)]
		changelog = System.getenv("CHANGELOG")
		dependencies {
			required.project "polymer"
		}

		loaders = ["fabric"]
	}

	jar {
		finalizedBy project.tasks.modrinth
	}
}
